<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_event"
        android:enabled="true"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/bottom_bar_event_title" />
    <item
        android:id="@+id/fragment_active"
        android:enabled="true"
        android:icon="@drawable/outline_location_on_24"
        android:title="@string/bottom_bar_active_title"/>
    <item
        android:id="@+id/fragment_friends"
        android:enabled="true"
        android:icon="@drawable/outline_groups_24"
        android:title="@string/bottom_bar_friends_title"/>
    <item
        android:id="@+id/fragment_settings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/bottom_bar_settings_title"/>
</menu>