<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.authentication.WelcomeActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="428dp"
        android:layout_height="422dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="348dp"
        android:layout_height="86dp"
        android:layout_marginTop="390dp"
        android:fontFamily="@font/waterfall_regular"
        android:gravity="center|top"
        android:includeFontPadding="false"
        android:text="@string/welcome_text"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="85sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="462dp"
        android:fontFamily="@font/robotoslab_semibold"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:paddingTop="0dp"
        android:text="@string/app_name"
        android:textColor="@color/md_theme_dark_background"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="130dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="130dp"
        android:text="@string/signup_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>