<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar_active_frag"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/settings_text"
            app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

        <TextView
            android:id="@+id/nickNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/nickname"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/nicknameTextButton"
            app:layout_constraintEnd_toEndOf="@+id/nicknameTextButton"
            app:layout_constraintStart_toStartOf="@+id/nicknameTextButton" />

        <Button
            android:id="@+id/nicknameTextButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="28dp"
            android:textSize="25sp"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:hint="@string/nickname_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toTopOf="@+id/profilePic">
        </Button>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePic"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_active_frag"
            app:shapeAppearanceOverlay="@style/circular"
            tools:srcCompat="@tools:sample/avatars" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_account"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="340dp"
            android:layout_height="72dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:cardBackgroundColor="?attr/colorSurfaceVariant">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/accountIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/null_text"
                    android:src="@drawable/baseline_person_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/settings_account"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/accountIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.128" />

                <TextView
                    android:id="@+id/textViewManage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_advice_account"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintStart_toStartOf="@+id/textViewAccount"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAccount" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="255dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_preferences"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="340dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_account"
            app:cardBackgroundColor="?attr/colorSurfaceVariant">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/preferencesIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/null_text"
                    android:src="@drawable/baseline_person_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPreferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/settings_preferences"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/preferencesIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.128" />

                <TextView
                    android:id="@+id/textViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_advice_preferences"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintStart_toStartOf="@+id/textViewPreferences"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPreferences" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_notifications"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="340dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_preferences"
            app:cardBackgroundColor="?attr/colorSurfaceVariant">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/notificationsIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/null_text"
                    android:src="@drawable/baseline_person_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/settings_notification"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/notificationsIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.128" />

                <TextView
                    android:id="@+id/textViewConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_advice_notifications"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintStart_toStartOf="@+id/textViewNotifications"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNotifications" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_privacy"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="340dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_notifications"
            app:cardBackgroundColor="?attr/colorSurfaceVariant">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/privacyIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/null_text"
                    android:src="@drawable/baseline_person_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/settings_privacy"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/privacyIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.102" />

                <TextView
                    android:id="@+id/textViewPermissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_advice_privacy"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintStart_toStartOf="@+id/textViewPrivacy"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPrivacy" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>