<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AccountSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAccountSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="27dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAccountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/twotone_arrow_back_24"
            app:title="@string/settings_account" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:text="@string/settings_name"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutAccountSettings" />

    <TextView
        android:id="@+id/account_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="accountName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/settings_email"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_full_name" />

    <TextView
        android:id="@+id/account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="accountEmail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="21dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutAccountSettings"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_hint_current_user_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="21dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password_text"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_new_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="21dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_text"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="60dp"
        android:text="@string/settings_button_change_password"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_text" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="22dp"
        android:text="@string/settings_button_delete_account"
        android:textColor="@color/md_theme_light_onErrorContainer"
        android:backgroundTint="@color/md_theme_light_errorContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>